fixed github z-index conflicts with projects hover section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -91,6 +91,7 @@ a {
   transition: all 100ms linear;
   display: flex;
   align-items: center;
+  z-index: 99;
   .fa-times {
     margin-right: 10px;
     font-size: 1.5em;
